[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-bounty-audit"
version = "0.1.0"
description = "Offline defensive web application security audit CLI for HAR captures."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cursor Agent" }]
license = { text = "MIT" }
keywords = ["security", "har", "audit", "web", "bugbounty"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Security",
]

[project.scripts]
web-bounty-audit = "web_bounty_audit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
